<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bank"
        android:layout_marginTop="68dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="38sp"
        android:textColor="@color/purple_200"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toRightOf="@+id/icon_bank"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:onClick="onClick"
        android:id="@+id/go_banks"
        android:background="#fff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/place"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/banks"
            android:src="@drawable/ic_place" />

        <TextView
            android:id="@+id/banks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banks"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/trend"
        android:background="#fff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_banks">

        <RelativeLayout
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ic_dollar"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/right"
                android:src="@drawable/ic_monetization"
                tools:ignore="ContentDescription,NotSibling" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/right"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/left"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/vaul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text=""
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal|fill_vertical|right"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/USD"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/USD"
                android:padding="4dp"
                android:layout_below="@id/vaul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/USD_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="80.91"
                android:layout_toRightOf="@id/USD"
                android:textSize="18sp"
                android:layout_below="@id/data"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/EUR"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/EUR"
                android:padding="4dp"
                android:layout_below="@id/USD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/EUR_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="75.02"
                android:layout_toRightOf="@id/EUR"
                android:textSize="18sp"
                android:layout_below="@id/USD_cost"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/go_in"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/go_in"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trend"/>




</androidx.constraintlayout.widget.ConstraintLayout>